[project]
name = "blur"
version = "0.1.0"
description = "Blur control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.27.1",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/blur"
Repository = "https://github.com/MyGithubAccount/blur"
Issues = "https://github.com/MyGithubAccount/blur/issues"

[tool.setuptools.package-data]
"flutter.blur" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.1",
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.1"}

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
