[project]
name = "flet-blur"
version = "0.2.0"
description = "Blur control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "KOGA Mitsuhiro", email = "shiena.jp@gmail.com" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "flet>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/shiena/flet-blur"
Documentation = "https://github.com/shiena/flet-blur"
Repository = "https://github.com/shiena/flet-blur"
Issues = "https://github.com/shiena/flet-blur/issues"

[tool.setuptools.package-data]
"flutter.flet_blur" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.26.0",
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = ">=0.26.0"}

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
